style: formating code